--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,11 @@ JWT_SECRET=
 SSH_HOST=
 SSH_USERNAME=
 SSH_PRIVATE_KEY=
+
+GITHUB_TOKEN=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+AWS_BUCKET=
+AWS_BUCKET_PUBLIC_DIR=public
