--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@m.moelter/task-runner": "^1.0.1",
     "@octokit/rest": "^18.0.3",
     "aws-sdk": "^2.731.0",
+    "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "chalk": "^4.1.0",
+    "cheerio": "^1.0.0-rc.3",
     "cli-progress": "^3.8.2",
     "commander": "^6.0.0",
     "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^59.0.0",
     "http-proxy-middleware": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
