--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@m.moelter/task-runner": "^1.0.1",
     "@octokit/rest": "^18.0.3",
     "aws-sdk": "^2.731.0",
     "axios": "^0.19.2",
@@ -28,6 +27,7 @@
     "cli-progress": "^3.8.2",
     "commander": "^6.0.0",
     "concurrently": "^5.2.0",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "googleapis": "^59.0.0",
