--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@m.moelter/task-runner": "^1.0.2",
     "@octokit/rest": "^18.0.3",
     "aws-sdk": "^2.731.0",
     "axios": "^0.19.2",
