--- a/content/projects/projects.json
+++ b/content/projects/projects.json
@@ -7,9 +7,8 @@
             "Javascript",
             "NodeJS",
             "React",
-            "Material UI",
             "Express",
-            "SQL",
+            "MySQL",
             "AWS",
             "Apache"
         ],
@@ -39,7 +38,7 @@
             "Laravel",
             "React",
             "Express",
-            "SQL",
+            "MySQL",
             "AWS",
             "Apache"
         ],
@@ -63,7 +62,7 @@
             "NodeJS",
             "React",
             "Express",
-            "SQL"
+            "MySQL"
         ],
         "type": "website",
         "apis": {
