--- a/content/projects/projects.json
+++ b/content/projects/projects.json
@@ -30,12 +30,34 @@
     {
         "name": "Yet Another Blog",
         "website": "https://www.yet-another-blog.com/",
-        "description": "Pretty ugly blog with some posts",
+        "description": "Pretty ugly blog with a few posts",
+        "techstack": [
+            "Javascript",
+            "PHP",
+            "Laravel",
+            "React",
+            "MySQL",
+            "AWS",
+            "Apache"
+        ],
+        "type": "website",
+        "apis": {
+            "__activity_analyzer": {
+                "activity_id": "5b1aa523-14c3-4d60-8475-4713dfeee90a"
+            },
+            "google_analytics": {
+                "view_id": 215340054
+            }
+        }
+    },
+
+    {
+        "name": "Activity Analyzer",
+        "website": "https://github.com/Tracer1337/activitiy-analyzer",
+        "description": "Tool for tracking and analyzing activities",
         "techstack": [
             "Javascript",
             "NodeJS",
-            "PHP",
-            "Laravel",
             "React",
             "Express",
             "MySQL",
