--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
     "devicon": "^2.2.0",
+    "highlight.js": "^10.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-hook-form": "^6.3.2",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.2",
