--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.0.0",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.3",
+    "chokidar": "^3.4.2",
     "cli-progress": "^3.8.2",
     "commander": "^6.0.0",
     "concurrently": "^5.2.0",
