--- a/package.json
+++ b/package.json
@@ -7,20 +7,13 @@
     "start": "concurrently \"npm run start-server\" \"npm run start-client\"",
     "start-server": "node scripts/start-server.js && nodemon server.js",
     "start-client": "cd client && npm run start",
-    "jwt-secret": "node ./scripts/jwt-secret.js",
-    "setup-db": "npm run migrate && npm run seed",
-    "migrate": "node ./scripts/migrate.js",
-    "seed": "node ./scripts/seed.js",
-    "deploy": "node scripts/deploy.js -b",
-    "create-bucket": "node ./scripts/create-bucket.js"
+    "migrate": "node ./scripts/migrate.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@m.moelter/task-runner": "^1.0.2",
-    "@octokit/rest": "^18.0.3",
-    "aws-sdk": "^2.731.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "chalk": "^4.1.0",
@@ -29,20 +22,15 @@
     "cli-progress": "^3.8.2",
     "commander": "^6.0.0",
     "concurrently": "^5.2.0",
-    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "googleapis": "^59.0.0",
     "http-proxy-middleware": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
-    "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "node-ssh": "^10.0.2",
     "open": "^7.1.0",
-    "sharp": "^0.25.4",
-    "uuid": "^8.2.0",
-    "xlsx": "^0.16.4"
+    "sharp": "^0.28.3",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
