--- a/package.json
+++ b/package.json
@@ -6,28 +6,17 @@
   "scripts": {
     "start": "concurrently \"npm run start-server\" \"npm run start-client\"",
     "start-server": "node scripts/start-server.js && nodemon server.js",
-    "start-client": "cd client && npm run start",
-    "migrate": "node ./scripts/migrate.js"
+    "start-client": "cd client && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@m.moelter/task-runner": "^1.0.2",
-    "axios": "^0.19.2",
-    "bcrypt": "^5.0.0",
-    "chalk": "^4.1.0",
-    "cheerio": "^1.0.0-rc.3",
-    "chokidar": "^3.4.2",
-    "cli-progress": "^3.8.2",
-    "commander": "^6.0.0",
     "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.27.0",
-    "mysql": "^2.18.1",
     "open": "^7.1.0",
     "sharp": "^0.28.3",
     "uuid": "^8.2.0"
