--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
+    "animejs": "^3.2.1",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "scrollmagic": "^2.0.8"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.4",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/scrollmagic": "^2.0.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.4"
