--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "animejs": "^3.2.1",
+    "canvas-confetti": "^1.5.1",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/animejs": "^3.1.4",
+    "@types/canvas-confetti": "^1.4.2",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
