--- a/package.json
+++ b/package.json
@@ -1,34 +1,21 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:Tracer1337/portfolio.git",
+  "author": "Tracer1337 <merlin.moelter@gmail.com>",
+  "license": "MIT",
   "private": true,
+  "workspaces": [
+    "app",
+    "client"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
-    "animejs": "^3.2.1",
-    "canvas-confetti": "^1.5.1",
-    "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "scrollmagic": "^2.0.8"
+    "dev": "run-p dev:*",
+    "dev:app": "yarn workspace app dev",
+    "dev:client": "yarn workspace client dev"
   },
   "devDependencies": {
-    "@types/animejs": "^3.1.4",
-    "@types/canvas-confetti": "^1.4.2",
-    "@types/node": "17.0.30",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
-    "@types/scrollmagic": "^2.0.2",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.4"
+    "npm-run-all": "^4.1.5"
   }
 }
