--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.1.9",
-    "@strapi/plugin-users-permissions": "4.1.9",
     "@strapi/plugin-i18n": "4.1.9",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.1.9",
+    "@strapi/strapi": "4.1.9",
+    "mysql": "^2.18.1"
   },
   "author": {
     "name": "A Strapi developer"
