--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,7 @@
     "next": "12.1.5",
     "qs": "^6.10.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "scrollmagic": "^2.0.8"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.4",
@@ -28,7 +27,6 @@
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
-    "@types/scrollmagic": "^2.0.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.4"
