--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "next": "12.1.5",
     "qs": "^6.10.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "scrollmagic": "^2.0.8"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.4",
