--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
+    "@mdi/js": "^6.6.96",
+    "@mdi/react": "^1.6.0",
     "@types/qs": "^6.9.7",
     "animejs": "^3.2.1",
     "canvas-confetti": "^1.5.1",
